.provarCaches/00D6C0000000xA6UAI/objects/CR_Automation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Auto_Close_Queue__c</fullName>
        <label>Auto Close Queue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Id__c</fullName>
        <label>Case Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject_Append_Words__c</fullName>
        <label>Case Subject Append Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Queue_Id__c</fullName>
        <label>Initial Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CR Automation</label>
</CustomObject>